# fure

./: Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yml
src/: backoff.rs  future.rs  lib.rs  policies.rs  sleep.rs
src/policies/: concurrent.rs  mod.rs  sequential.rs
