[package]
name = "fure"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "time" ], default-features = false, optional = true }
async-std = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = [ "time", "rt" ], default-features = false }
reqwest = "0.11"

[features]
default = [ "tokio" ]