[package]
name = "fure"
version = "0.1.1"
edition = "2018"
authors = ["Ilya Titkov <ilya@titkov.me>"]
keywords = ["futures-retry", "retry", "futures"]
license = "MIT"
description = "Retrying futures using different policies"
categories = ["asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/fure"
repository = "https://github.com/Leonqn/fure"

[dependencies]
tokio = { version = "1", features = [ "time" ], default-features = false, optional = true }
async-std = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = [ "time", "rt" ], default-features = false }
reqwest = "0.11"

[features]
default = [ "tokio" ]

[package.metadata.docs.rs]
features = ["rand", "tokio"]
